Added requirement.txt, progressed with dqa: cleaned dataset, looking into data now

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -9,270 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
     "# einlesen der Daten von json\n",
-    "data = pd.read_json(\"2024-02-21-Schadenserkennung-Annotationen.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data = pd.read_json(\"2024-02-21-Schadenserkennung-Annotationen.json\")\n",
     "data = data.set_index(\"id\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image</th>\n",
-       "      <th>choice</th>\n",
-       "      <th>label</th>\n",
-       "      <th>annotator</th>\n",
-       "      <th>annotation_id</th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>updated_at</th>\n",
-       "      <th>lead_time</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>Bildartefakte</td>\n",
-       "      <td>[{'points': [[32.57920522223961, 39.3153291623...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>55</td>\n",
-       "      <td>2023-09-22 11:11:38.664374+00:00</td>\n",
-       "      <td>2023-11-07 08:09:17.953872+00:00</td>\n",
-       "      <td>3936.623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[{'points': [[68.27534605312383, 44.7552447552...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2023-09-22 11:11:45.524153+00:00</td>\n",
-       "      <td>2023-09-22 12:31:38.328846+00:00</td>\n",
-       "      <td>84.433</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>Bildartefakte</td>\n",
-       "      <td>[{'points': [[33.45478242525879, 38.3449883449...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>57</td>\n",
-       "      <td>2023-09-22 11:11:54.928596+00:00</td>\n",
-       "      <td>2023-09-22 13:00:58.143600+00:00</td>\n",
-       "      <td>1765.388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>Bildartefakte</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>76</td>\n",
-       "      <td>2023-09-22 13:01:09.351468+00:00</td>\n",
-       "      <td>2023-09-22 13:01:09.351493+00:00</td>\n",
-       "      <td>8.986</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[{'points': [[22.929010403804327, 49.662773595...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>58</td>\n",
-       "      <td>2023-09-22 11:21:22.438563+00:00</td>\n",
-       "      <td>2023-09-26 08:20:49.284665+00:00</td>\n",
-       "      <td>271.547</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                image         choice  \\\n",
-       "id                                                                     \n",
-       "1   /data/local-files/?d=aktuelle_container_bilder...  Bildartefakte   \n",
-       "2   /data/local-files/?d=aktuelle_container_bilder...            NaN   \n",
-       "3   /data/local-files/?d=aktuelle_container_bilder...  Bildartefakte   \n",
-       "4   /data/local-files/?d=aktuelle_container_bilder...  Bildartefakte   \n",
-       "5   /data/local-files/?d=aktuelle_container_bilder...            NaN   \n",
-       "\n",
-       "                                                label  annotator  \\\n",
-       "id                                                                 \n",
-       "1   [{'points': [[32.57920522223961, 39.3153291623...          1   \n",
-       "2   [{'points': [[68.27534605312383, 44.7552447552...          1   \n",
-       "3   [{'points': [[33.45478242525879, 38.3449883449...          1   \n",
-       "4                                                 NaN          1   \n",
-       "5   [{'points': [[22.929010403804327, 49.662773595...          1   \n",
-       "\n",
-       "    annotation_id                       created_at  \\\n",
-       "id                                                   \n",
-       "1              55 2023-09-22 11:11:38.664374+00:00   \n",
-       "2              56 2023-09-22 11:11:45.524153+00:00   \n",
-       "3              57 2023-09-22 11:11:54.928596+00:00   \n",
-       "4              76 2023-09-22 13:01:09.351468+00:00   \n",
-       "5              58 2023-09-22 11:21:22.438563+00:00   \n",
-       "\n",
-       "                         updated_at  lead_time  \n",
-       "id                                              \n",
-       "1  2023-11-07 08:09:17.953872+00:00   3936.623  \n",
-       "2  2023-09-22 12:31:38.328846+00:00     84.433  \n",
-       "3  2023-09-22 13:00:58.143600+00:00   1765.388  \n",
-       "4  2023-09-22 13:01:09.351493+00:00      8.986  \n",
-       "5  2023-09-26 08:20:49.284665+00:00    271.547  "
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data.head()"
+    "## Verwerfen von nicht brauchbaren Daten"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 228,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>[{'points': [[32.57920522223961, 39.3153291623...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>[{'points': [[68.27534605312383, 44.7552447552...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>[{'points': [[33.45478242525879, 38.3449883449...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>/data/local-files/?d=aktuelle_container_bilder...</td>\n",
-       "      <td>[{'points': [[22.929010403804327, 49.662773595...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                image  \\\n",
-       "id                                                      \n",
-       "1   /data/local-files/?d=aktuelle_container_bilder...   \n",
-       "2   /data/local-files/?d=aktuelle_container_bilder...   \n",
-       "3   /data/local-files/?d=aktuelle_container_bilder...   \n",
-       "4   /data/local-files/?d=aktuelle_container_bilder...   \n",
-       "5   /data/local-files/?d=aktuelle_container_bilder...   \n",
-       "\n",
-       "                                                label  \n",
-       "id                                                     \n",
-       "1   [{'points': [[32.57920522223961, 39.3153291623...  \n",
-       "2   [{'points': [[68.27534605312383, 44.7552447552...  \n",
-       "3   [{'points': [[33.45478242525879, 38.3449883449...  \n",
-       "4                                                 NaN  \n",
-       "5   [{'points': [[22.929010403804327, 49.662773595...  "
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# verwerfen von nicht zu verwendenen Daten\n",
     "#\n",
@@ -284,24 +51,202 @@
     "#   \n",
     "# Die restlichen Werte können relevant sein für das trainieren des algorithmus\n",
     "\n",
-    "data_dropped = data.drop([\"created_at\", \"updated_at\", \"lead_time\", \"annotation_id\", \"annotator\", \"choice\"], axis=1)\n",
-    "data_dropped.head()"
+    "data_dropped = data.drop([\"created_at\", \"updated_at\", \"lead_time\", \"annotation_id\", \"annotator\", \"choice\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kategorie \"label\" weiter aufteilen\n",
+    "Extrahieren der einzelnen Schadensarten und festlegen ob es überhaupt schäden hat."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "label = pd.json_normalize(data_dropped[\"label\"])\n",
+    "total = ['Schimmel', 'Wasser', 'Sonstiges', 'Schäden', 'Schmutz', 'Schädlinge']\n",
+    "\n",
+    "# Add column for every category used\n",
+    "for x in total:\n",
+    "    data_dropped[x] = False\n",
+    "data_dropped[\"hat_schäden\"] = None\n",
+    "\n",
+    "# True where category is true\n",
+    "# rows\n",
+    "for x in range(label.shape[0]):\n",
+    "    rowx = set()\n",
+    "    # colums\n",
+    "    for y in range(label.shape[1]):\n",
+    "        if label[y][x] != None:\n",
+    "            rowx.add(label[y][x][\"polygonlabels\"][0])\n",
+    "    if label[0][x] == None:\n",
+    "        data_dropped.loc[x+1, \"hat_schäden\"]= False\n",
+    "    else:\n",
+    "        for s in rowx:\n",
+    "            data_dropped.loc[x+1, s] = True\n",
+    "        data_dropped.loc[x+1, \"hat_schäden\"] = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datentyps kontrollieren\n",
+    "image ist ein objekt, da strings in pandas so gespeichert werden.\n",
+    "\n",
+    "label ist ein objekt da es gemischte Datentypen enthält: strings, int, float, bool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change \"hat_schäden\" da es nur True und Fale drin hat\n",
+    "data_preprocessed = data_dropped.astype({\"hat_schäden\" : \"bool\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Auf None/Nan kontrollieren\n",
+    "Wenn diese in \"image\" auftreten --> löschen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# False = keine None/Nan\n",
+    "nonetest = data_preprocessed[\"image\"].isnull().any()\n",
+    "\n",
+    "if nonetest == True:\n",
+    "    # drop rows with None only\n",
+    "    data_preprocessed.dropna(axis=0, how=\"all\", inplace=True)\n",
+    "    # drop rows with none in image, without areference it is impossible to get to the right picture\n",
+    "    data_preprocessed.dropna(axis=0, subset=[\"image\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mengen und verschiedene Anhaltspunkte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hat_schäden\n",
+       "True     882\n",
+       "False    199\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_preprocessed[\"hat_schäden\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es hat 882 Einträge die schäden aufweisen und 199 die keine haben"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Schimmel': 10, 'Wasser': 274, 'Sonstiges': 402, 'Schäden': 237, 'Schmutz': 871, 'Schädlinge': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "truthlist = {}\n",
+    "for x in total:\n",
+    "    truthlist[x] = data_preprocessed[x].value_counts()[True]\n",
+    "print(truthlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Schimmel  Wasser  Sonstiges  Schäden  Schmutz  Schädlinge\n",
+       "False     False   False      False    True     False         234\n",
+       "                  True       False    True     False         207\n",
+       "                  False      False    False    False         199\n",
+       "          True    False      False    True     False         100\n",
+       "                  True       False    True     False          87\n",
+       "          False   False      True     True     False          80\n",
+       "                  True       True     True     False          69\n",
+       "          True    False      True     True     False          52\n",
+       "                  True       True     True     False          28\n",
+       "          False   True       False    False    False           6\n",
+       "True      False   False      False    True     False           3\n",
+       "                  True       False    True     False           2\n",
+       "                  False      True     True     False           2\n",
+       "False     True    False      False    True     True            2\n",
+       "          False   False      True     False    False           2\n",
+       "          True    True       False    False    False           1\n",
+       "                  False      True     False    False           1\n",
+       "                             False    False    False           1\n",
+       "          False   True       True     True     True            1\n",
+       "                  False      False    True     True            1\n",
+       "True      False   True       True     True     False           1\n",
+       "          True    False      False    True     False           1\n",
+       "                             True     True     False           1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_preprocessed[total].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# TODO: \n",
-    "1. kontrollieren der einzelnen datentypen\n",
-    "2. die kollumne label weiter unterteilen\n"
+    "1. verteilung der einzelnen schadenstypen, menge, min, max usw\n",
+    "3. verteilung von: hat schäden und hat keine\n",
+    "\n",
+    "\n",
+    "Zeile 216 hat die meisten schadenseinträge, gesamt 37"
    ]
   },
   {
@@ -335,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
