Extrahieren der ersten liste von indexen zum verwenden in experimenten

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -9,18 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +248,7 @@
        "9008"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,29 +263,187 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extrahieren eines kleinen Datensets für erste Experimente"
+    "## Extrahieren eines kleinen Datensets für erste Experimente\n",
+    "\n",
+    "Das Ziel ist es ein möglichst ausgeglichenes Datenset zu erhalten"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample size for Schädlinge is 4 instead of the wanted sample size of 7. Has not more entries then that.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>146</td>\n",
+       "      <td>52</td>\n",
+       "      <td>91</td>\n",
+       "      <td>46</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>163.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>159</td>\n",
+       "      <td>494</td>\n",
+       "      <td>618</td>\n",
+       "      <td>388</td>\n",
+       "      <td>988.0</td>\n",
+       "      <td>797.0</td>\n",
+       "      <td>935.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>853</td>\n",
+       "      <td>846</td>\n",
+       "      <td>124</td>\n",
+       "      <td>709</td>\n",
+       "      <td>402.0</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>1052.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>477</td>\n",
+       "      <td>48</td>\n",
+       "      <td>825</td>\n",
+       "      <td>494</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>613.0</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>489</td>\n",
+       "      <td>93</td>\n",
+       "      <td>624</td>\n",
+       "      <td>94</td>\n",
+       "      <td>1057.0</td>\n",
+       "      <td>946.0</td>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>123</td>\n",
+       "      <td>176</td>\n",
+       "      <td>66</td>\n",
+       "      <td>159</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>455</td>\n",
+       "      <td>70</td>\n",
+       "      <td>555</td>\n",
+       "      <td>992</td>\n",
+       "      <td>381.0</td>\n",
+       "      <td>862.0</td>\n",
+       "      <td>331.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0    1    2    3       4      5       6\n",
+       "0  146   52   91   46   109.0   61.0   163.0\n",
+       "1  159  494  618  388   988.0  797.0   935.0\n",
+       "2  853  846  124  709   402.0  380.0  1052.0\n",
+       "3  477   48  825  494    21.0  613.0    35.0\n",
+       "4  489   93  624   94  1057.0  946.0   117.0\n",
+       "5  123  176   66  159     NaN    NaN     NaN\n",
+       "6  455   70  555  992   381.0  862.0   331.0"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_sample_temp = []\n",
+    "random_state = 42\n",
+    "sample_size = 7\n",
+    "for x in total:\n",
+    "    size = len(data_preprocessed.loc[data_preprocessed[x] == True].index)\n",
+    "    if size < sample_size:\n",
+    "        data_sample_temp.append(data_preprocessed.loc[data_preprocessed[x] == True].sample(n=size, random_state=random_state).index)\n",
+    "        print(\"Sample size for \" + x + \" is \" + str(size) + \" instead of the wanted sample size of \" + str(sample_size) + \". Has not more entries then that.\")\n",
+    "    else:\n",
+    "        data_sample_temp.append(data_preprocessed.loc[data_preprocessed[x] == True].sample(n=sample_size, random_state=random_state).index)\n",
+    "\n",
+    "# Takes a sample from not damaged bookpictures\n",
+    "size = len(data_preprocessed.loc[data_preprocessed[\"hat_schäden\"] == False].index)\n",
+    "if size < sample_size:\n",
+    "    data_sample_temp.append(data_preprocessed.loc[data_preprocessed[\"hat_schäden\"] == False].sample(n=size, random_state=random_state).index)\n",
+    "    print(\"Sample size for \\\"hat_schäden\\\" is \" + str(size) + \" instead of the wanted sample size of \" + str(sample_size) + \". Has not more entries then that.\")\n",
+    "else:\n",
+    "    data_sample_temp.append(data_preprocessed.loc[data_preprocessed[\"hat_schäden\"] == False].sample(n=sample_size, random_state=random_state).index)\n",
+    "\n",
+    "data_sample = pd.DataFrame(data_sample_temp)\n",
+    "data_sample"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[146, 52, 91, 46, 109, 61, 163, 159, 494, 618, 388, 988, 797, 935, 853, 846, 124, 709, 402, 380, 1052, 477, 48, 825, 494, 21, 613, 35, 489, 93, 624, 94, 1057, 946, 117, 123, 176, 66, 159, 455, 70, 555, 992, 381, 862, 331]\n"
+     ]
+    }
+   ],
+   "source": [
+    "flat = data_sample.to_numpy().flatten()\n",
+    "# list is optional, without it is a numpy array\n",
+    "index_list = list(flat[~np.isnan(flat)].astype(int))\n",
+    "print (index_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
